# pydantic-gpx

./: .pre-commit-config.yaml  LICENSE.txt  README.md  conftest.py  pyproject.toml
src/pydantic_gpx/: __about__.py  __init__.py  gpx11.py  pydantic_rfc3986.py
tests/: test_gpx11.py
tests/data/: 1C07C8B25CCE4CC17DED39F37936AA15.gpx  example-wikipedia.gpx  gpx1.1_with_all_fields.gpx
