[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "pydantic-gpx"
dynamic = ["version"]
description = "Pydantic model for GPX data"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["pydantic", "xml", "gpx"]
authors = [{ name = "Florian Demmer", email = "fdemmer@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["pydantic-xml"]

[project.urls]
Documentation = "https://github.com/fdemmer/pydantic-gpx#readme"
Issues = "https://github.com/fdemmer/pydantic-gpx/issues"
Source = "https://github.com/fdemmer/pydantic-gpx"


[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydantic_gpx tests}"


[tool.coverage.run]
source_pkgs = ["pydantic_gpx", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
pydantic_gpx = ["src/pydantic_gpx", "*/pydantic-gpx/src/pydantic_gpx"]
tests = ["tests", "*/pydantic-gpx/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]


[tool.black]
line-length = 79


[tool.ruff]
src = ["src", "tests", "docs"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["pydantic", "tests"]
